# rejected

./: .codeclimate.yml  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README  README.md  README.rst  dev-requirements.txt  docker-compose.yml  enqueue-test.py  example.yaml  examples.py  mcp.py  monitors.py  pyproject.toml  rejected.py  requirements.txt  rtd-requirements.txt  setup.cfg  setup.py  statengine.py  test.yaml
.github/workflows/: deploy.yaml  testing.yaml
ci/: test.sh
docs/: Makefile  api_consumer.rst  api_consumers.rst  api_data.rst  api_exceptions.rst  api_internal.rst  api_mixins.rst  api_publishing_consumer.rst  api_smart_consumer.rst  api_smart_publishing_consumer.rst  api_testing.rst  cli.rst  concepts.rst  conf.py  configuration.rst  consumer.rst  consumer_howto.rst  consumers.rst  example_config.rst  history.rst  index.rst  index.txt  installation.rst  testing.rst
etc/: example.yaml
examples/: README.md  examples.py  examples.yaml  setup.py
init.d/: rejected
logs/: README
processors/: test_processor.py
rejected/: __init__.py  __main__.py  amqp.py  cli.py  client.py  common.py  compat.py  config.py  connection.py  consumer.py  controller.py  daemon.py  data.py  errors.py  example.py  exceptions.py  log.py  mcp.py  mixins.py  models.py  monitors.py  patterns.py  process.py  processor.py  runner.py  smart_consumer.py  state.py  stats.py  statsd.py  testing.py  utils.py
rejected01-bin/: opslog.py  restart-email.sh  restart.sh  setaffinity.sh  start-email.sh  start-irsupload.sh  start-memoryhole.sh  start.sh  stop.sh
rejected02-bin/: restart-cart.sh  restart-efferent.sh  restart-email.sh  restart-fb-live-invite.sh  restart-fbl.sh  start-cart.sh  start-efferent.sh  start-email.sh  start-fb-live-invite.sh  start-fbl.sh  start.sh  stop.sh
requires/: development.txt  installation.txt  rtd.txt  testing.txt
sbin/: rejected.py
stage02-bin/: restart-cart.sh  restart-efferent.sh  restart-fb-live-invite.sh  restart-irsupload.sh  restart.sh  start-cart.sh  start-efferent.sh  start-fb-live-invite.sh  start-irsupload.sh
tests/: __init__.py  common.py  enqueue-test.py  mocks.py  test.yaml  test_cli.py  test_config.py  test_consumer.py  test_daemon.py  test_data.py  test_errors.py  test_log.py  test_mcp.py  test_mixins.py  test_models.py  test_percentile.py  test_process.py  test_processor.py  test_smart_consumer.py  test_state.py  test_statsd.py  test_testing.py  test_utils.py
tests/data/: bad_config.json  bad_config.toml  bad_config.yaml  good_config.json  good_config.toml  good_config.yaml  invalid.json  invalid.toml  invalid.yaml
utils/: test_generator.py
